# acrobot

./: README.md  Sim_Pend_2.m  a_draw_animation.m  acrobot_control.sh
DH_FOLDER/: Readme.md  Readme.md.txt
Projects/Acrobot/: readme.md
Projects/Acrobot/matlab/: Sim_pend_lqr.m  a_draw_animation.m  inverted_pendulum.m
Projects/Acrobot/matlab/[2017.02.17] swing up/: Double_Pendulum_v2.m  Double_Pendulum_v3.m  Double_Pendulum_v4.m  LQR.m  readme.md  run_LQR.m
Projects/Acrobot/matlab/[2017.02.20] SWING-UP(Collocated)/: Double_Pendulum_v1.m
Projects/Acrobot/matlab/[2017.02.24] SWING-UP(Non-Collocated)/: Double_Pendulum_v1.m
Projects/Acrobot/ros/beginner_tutorials/scripts/: talker.py
acrobot_control/: CMakeLists.txt
acrobot_control/launch/: acrobot_control.launch
acrobot_control/src/: acrobot_control.cpp
acrobot_controllers/: CMakeLists.txt  controller_plugins.xml  package.xml
acrobot_controllers/config/: acrobot_controllers.yaml
acrobot_controllers/launch/: acrobot_controllers.launch
acrobot_controllers/src/: acrobot.h  taskspace_pfl_controller.cpp
acrobot_gazebo/launch/: acrobot_world.launch
lecture/underactuated_robotics/lecture_1/: Appendix A_Lagrangian Mechanics.docx  Presentation.pptx
project/acrobot/: matlab-ros_serial.pptx  parameter.pptx  readme.md
project/acrobot/matlab/[2017.02.17] swing up/: Double_Pendulum_v2.m  Double_Pendulum_v4.m  Get_LQR_Gain.m  readme.md  run.m
project/acrobot/matlab/[2017.02.24] SWING-UP(Non-Collocated)/: Double_Pendulum_v1.m
project/acrobot/robotis/: acrobot.ino
project/acrobot/ros/acrobot/: README.md
project/acrobot/ros/acrobot/acrobot_control/: package.xml
project/acrobot/ros/acrobot/acrobot_control/config/: acrobot_control.yaml
project/acrobot/ros/acrobot/acrobot_control/launch/: acrobot_control_cpp.launch
project/acrobot/ros/acrobot/acrobot_control/scripts/: acrobot_control.py
project/acrobot/ros/acrobot/acrobot_control/scripts/192.168.11.9/192.168.11.9/: rospack_cache_14109342336723098618
project/acrobot/ros/acrobot/acrobot_control/src/: Acrobot.h  acrobot_control.cpp  acrobot_control0428.cpp  acrobot_control_copy.cpp  acrobot_control_v2.cpp
project/acrobot/ros/acrobot/acrobot_description/: cal_param.m  package.xml
project/acrobot/ros/acrobot/acrobot_description/urdf/: acrobot.xacro  rrbot.xacro
project/acrobot/ros/beginner_tutorials/: README.md
project/acrobot/ros/beginner_tutorials/scripts/: listener.py
robotis/: 모터및openCM세팅.pptx
ros/acrobot/: acrobot_control (copy).py
ros/acrobot/acrobot_control/: CMakeLists.txt  package.xml
ros/acrobot/acrobot_control/config/: acrobot_control.yaml
ros/acrobot/acrobot_control/launch/: acrobot_control.launch
ros/acrobot/acrobot_control/scripts/: acrobot_control.py
ros/beginner_tutorials/: package.xml
