<?xml version="1.0"?>
<package>
  <name>acrobot_controllers</name>
  <version>0.0.0</version>
  <description>acrobot_controllers package</description>

  <maintainer email="babchol@gmail.com">Hancheol Choi</maintainer>

  <license>BSD</license>

  <url type="bugtracker"></url>
  <url type="repository">https://github.com/modulabs/gdyn-acrobot</url>

  <author email="babchol@gmail.com">Hancheol Choi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>control_msgs</build_depend> 

  <run_depend>controller_interface</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>control_msgs</run_depend> 
  
  <export>
    <controller_interface plugin="${prefix}/controller_plugins.xml" />
  </export>
</package>
